<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Notification -->
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="notif"
        android:summary="@string/notif_summary"
        android:title="@string/notif_title"/>
    <!-- Message -->
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="notif"
        android:summary="@string/message_summary"
        android:title="@string/message_title"/>
    <!-- Tasks due -->
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="notif"
        android:summary="@string/task_summary"
        android:title="@string/task_title"/>

    <!-- Profile -->
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="profile"
        android:summary="@string/prof_summary"
        android:title="@string/prof_title"/>
    <!-- Name -->
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    ... />
    <!-- Picture -->
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_picture"
        android:defaultValue=""
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    <!-- Email -->
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_email"
        android:defaultValue="@string/pref_default_email"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- Phone -->
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_phonenumber"
        android:defaultValue="@string/pref_default_phonenumber"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />


</PreferenceScreen>