<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/app_name"
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"/>

    <ImageView android:src="@drawable/ic_launcher"
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:padding="50dp"/>

    <TextView android:text="@string/google"
        android:id="@+id/google"
        android:layout_below="@id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>

    <TextView android:text="@string/username"
        android:id="@+id/username"
        android:layout_below="@id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"/>

    <TextView android:text="@string/password"
        android:id="@+id/password"
        android:layout_below="@id/usernameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"/>

    <Button android:text="@string/login"
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEdit"
        android:layout_centerHorizontal="true"
        android:clickable="true"/>

</RelativeLayout>
